[project]
name = "learn-agent"
version = "0.1.0"
description = "A lightweight Agent system with Tool, Model, and Memory abstractions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "fastapi>=0.128.0",
    "icecream>=2.1.8",
    "mem0ai>=1.0.1",
    "openai>=1.0.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "socksio>=1.0.0",
    "sse-starlette>=3.1.2",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
